<resources>
    <string name="app_name">CheryAC</string>
    <string name="welcome_mode">迎宾模式</string>
    <string name="long_distance_mode">长途模式</string>
    <string name="relax_mode">放松模式</string>
    <string name="fragrance_open">香氛开启</string>
    <string name="nature">清新自然</string>
    <string name="flower_fruit">运动激情</string>
    <string name="lavender">缤纷花香</string>
    <string name="fragrance_concentration_high">高</string>
    <string name="fragrance_concentration_middle">中</string>
    <string name="fragrance_concentration_low">低</string>
    <string name="fragrance_concentration">浓度</string>
    <string name="automatic_monitor">自动监测</string>
    <string name="carbon_dioxide_concentration">CO2浓度</string>
    <string name="inside_air_fresh">车内空气清新</string>
    <string name="open_ventilation_system">已开启通风系统</string>
    <string name="open_car_camera">已开启车内摄像头</string>
    <string name="inform_owner">已APP通知车主</string>
    <string name="send_car_picture">已发送车内照片</string>
    <string name="forty_percent">40%</string>
    <string name="fog_probability">起雾概率</string>
    <string name="automatic_defog">自动除雾</string>
    <string name="start_automatic_defog">即将进行自动除雾</string>
    <string name="defog_completed">除雾已完成</string>
    <string name="car_inner">车内</string>
    <string name="pm25">PM2.5</string>
    <string name="air_quality">空气质量</string>
    <string name="excellent">优</string>
    <string name="good">良</string>
    <string name="mild_pollution">轻度污染</string>
    <string name="middle_pollution">中度污染</string>
    <string name="severe_pollution">重度污染</string>
    <string name="serious_pollution">严重污染</string>
    <string name="automatic_purification">自动净化</string>
    <string name="manual_purification">手动净化</string>
    <string name="car_outer">车外</string>
    <string name="monitor_vital_signs_1">监测到车内存在生命体征</string>
    <string name="monitor_vital_signs_2">车内生命体出现恶心呕吐!</string>
    <string name="monitor_vital_signs_3">车内生命体出现呼吸困难、神情呆滞!</string>
    <string name="monitor_vital_signs_4">车内生命体出现严重缺氧,需紧急救援!</string>
    <string name="monitor_vital_signs_5">车内生命体已脱离生命威胁!</string>
    <string name="monitor_vital_signs_6">车内生命体呼吸恢复平稳!</string>
    <string name="monitor_vital_signs_7">车内生命体恶心现象缓解!</string>
    <string name="monitor_vital_signs_8">车内生命体征已恢复正常!</string>
    <string name="monitor_vital_signs_rescue">AI机器人已经自动\n拨打120前来救援!</string>
</resources>
