<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vital_signs">

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/widget_size_20"
        android:layout_marginBottom="@dimen/widget_size_15"
        android:src="@drawable/icon_home" />

    <RelativeLayout
        android:id="@+id/rl_electrocardiogram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/widget_size_30">

        <ImageView
            android:id="@+id/iv_electrocardiogram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_electrocardiogram" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_electrocardiogram"
            android:layout_centerHorizontal="true"
            android:text="@string/vital_signs_normal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_size_10"
        android:layout_marginTop="@dimen/widget_size_20"
        android:layout_toEndOf="@+id/rl_electrocardiogram">

        <LinearLayout
            android:id="@+id/ll_ventilation_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_size_5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_ventilation_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_ok_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_size_40"
                android:layout_marginTop="@dimen/widget_size_5"
                android:text="@string/open_ventilation_system"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_car_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_ventilation_system"
            android:layout_marginTop="@dimen/widget_size_5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_car_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_ok_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_size_20"
                android:layout_marginTop="@dimen/widget_size_5"
                android:text="@string/open_car_camera"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_inform_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_car_camera"
            android:layout_marginTop="@dimen/widget_size_5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_inform_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_ok_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_size_40"
                android:layout_marginTop="@dimen/widget_size_5"
                android:text="@string/inform_owner"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_send_car_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_inform_owner"
            android:layout_marginTop="@dimen/widget_size_5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_send_car_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_ok_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_size_40"
                android:layout_marginTop="@dimen/widget_size_5"
                android:text="@string/send_car_picture"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_carbon_dioxide_concentration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_size_50"
        android:layout_marginTop="@dimen/widget_size_100"
        android:layout_toEndOf="@+id/rl_switch_automatic_monitor">

        <ImageView
            android:id="@+id/iv_carbon_dioxide_concentration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_size_5"
            android:src="@drawable/icon_carbon_dioxide_concentration" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_size_20"
            android:layout_toEndOf="@+id/iv_carbon_dioxide_concentration"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragrance_concentration_high"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widget_size_60"
                android:text="@string/fragrance_concentration_middle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widget_size_60"
                android:text="@string/fragrance_concentration_low"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_20" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_carbon_dioxide_concentration"
            android:layout_marginTop="@dimen/widget_size_20"
            android:text="@string/carbon_dioxide_concentration"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_switch_automatic_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/widget_size_50">

        <CheckBox
            android:id="@+id/cb_switch_automatic_monitor"
            style="@style/CustomCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cb_switch_automatic_monitor"
            android:text="@string/automatic_monitor"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>

</RelativeLayout>